<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:lines="6"
        android:singleLine="false" />

    <EditText
        android:id="@+id/marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="text" />

    <EditText
        android:id="@+id/modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="text" />

    <EditText
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="false"
        android:enabled="true"
        android:hint="@string/data"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="text" />

    <TextView
        android:id="@+id/textCategoria"
        android:text="Situação"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner

        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/select"
        android:entries="@array/array_name" />

    <EditText
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textMultiLine"
        android:lines="3" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_label"
        android:textColor="@android:color/white" />
</LinearLayout>